[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "utilities-robetraks"
version = "0.1.0"
description = "A collection of utility functions for data analysis and plotting"
readme = "README.md"
authors = [
    {name = "Akshay Jain"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "matplotlib>=3.0.0",
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "scipy>=1.4.0",
    "Pillow>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=20.8b1",
    "flake8>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/robetraks/Utilities"
Repository = "https://github.com/robetraks/Utilities"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
